plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.8'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "io.jsonwebtoken:jjwt:0.9.1"
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'

    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //내장 Redis    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'it.ozimov:embedded-redis:0.7.1'

    //json
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'

    // aws
    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.2'
    //implementation group: 'org.springframework.cloud', name: 'spring-cloud-aws', version: '2.2.1.RELEASE', ext: 'pom'
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.533'
    implementation 'io.awspring.cloud:spring-cloud-aws:2.4.2'

    implementation platform('software.amazon.awssdk:bom:2.20.85')
    implementation 'software.amazon.awssdk:dynamodb-enhanced'

    // web client
    implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.2'

    implementation 'com.github.downgoon:marvin:1.5.5'
    implementation 'com.github.downgoon:MarvinPlugins:1.5.5'
    implementation 'com.drewnoakes:metadata-extractor:2.18.0'
    implementation 'org.imgscalr:imgscalr-lib:4.2'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

processResources.dependsOn('copyGitSubmodule')
task copyGitSubmodule(type: Copy) {
    from './config'
    include '*.yaml', '*.json'
    into 'src/main/resources'
}


tasks.named('test') {
    useJUnitPlatform()
}

jar {
    enabled = false
}
